<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferencias_principal" >

    <CheckBoxPreference
        android:key="musica"
        android:summary="@string/p_musica_summary"
        android:title="@string/p_musica" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/tiposGraficos"
        android:entryValues="@array/tiposGraficosValores"
        android:key="graficos"
        android:summary="@string/p_graficos_summary"
        android:title="@string/p_graficos" />

    <EditTextPreference
        android:defaultValue="3"
        android:inputType="number"
        android:key="fragmentos"
        android:summary="@string/p_fragmentos_summary"
        android:title="@string/p_fragmentos" android:shouldDisableView="true"/>

</PreferenceScreen>