<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.asteroides.Asteroides" >

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dip"
        android:text="@string/titulo_aplicacion"
        android:textSize="25sp" />

    <Button
        android:id="@+id/b_jugar"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/arrancar" />

    <Button
        android:id="@+id/b_configurar"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:onClick="lanzarPreferencias"
        android:text="@string/configurar" />

    <Button
        android:id="@+id/b_puntuacion"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/puntuacion" />

    <Button
        android:id="@+id/b_acercaDe"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/acerca_de" />

    <Button
        android:id="@+id/b_salir"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/salir" />

</LinearLayout>